...
    isWindowNarrow,
  ]);

  const getTitle = () => {
    switch (chatType) {
      case 'group':
        return 'Group info & settings';
      case 'channel':
        return 'Channel info';
      default:
        return 'Info';
    }
  };
...
        backAction={handleGoBack}
        useHorizontalTitleLayout={!isWindowNarrow}
        title={getTitle()}
        rightActions={[
          {
            id: 'DetailsEditButton',
            text: 'Rename',
            onPress: handlePressEdit,
            disabled: !actionsEnabled,
            tint: '$primaryText',
            testID: 'DetailsEditButton',
            visible: currentUserIsAdmin,
          },
...
