...
        handleGoToUserProfile={() => {}}
        onPressRetry={async () => {}}
        onPressDelete={() => {}}
        negotiationMatch
        onGroupAction={() => {}}
        goToDm={() => {}}
        goBack={() => setPressed('Back')}
      />
    );
  }

  return (
    <View flex={1} backgroundColor="$background">
...
