...
        rightControls={
          <ScreenHeader.TextButton
            onPress={handleSave}
            color="$positiveActionText"
            testID="RoleSelectionSaveButton"
          >
            Save
          </ScreenHeader.TextButton>
        }
      />
      <YStack flex={1} padding="$xl" gap="$xl">
        <TextInput
          icon="Search"
...
