...
      Alert.alert(`Add ${getDisplayName(contact)}?`, '', [
        {
          text: 'Cancel',
          style: 'cancel',
        },
        {
          text: 'Add Contact',
          style: 'default',
          onPress: () => {
            store.addContact(contact.id);
          },
        },
        {
...
            backAction={navigation.goBack}
            borderBottom
            rightActions={[
              {
                id: 'add-contacts',
                icon: 'Add',
                label: 'Add contacts',
                testID: 'ContactsAddButton',
                onPress: () => navigate('AddContacts'),
              },
            ]}
            placement="navigation"
          />
...
