...
          </PaddedBlock>

          <YStack flex={1}>
            <ContactBook
              multiSelect
              searchable
              searchPlaceholder="Filter by nickname, @p"
              onSelectedChange={setInvitees}
              disabledIds={disabledIds}
              disabledReason="App version mismatch"
            />
          </YStack>

...
