...
    title: 'New Workspace',
    subtitle: '',
    actionTitle: 'New Workspace',
    actionDescription: 'Start a new chat with your Tlonbot',
  },
  joinGroup: {
    title: 'Join a group',
    subtitle: 'Join a group chat with a code (reference)',
    actionTitle: 'Join a group with a code (reference)',
    actionDescription: 'Join with a code (reference)',
  },
} as const;

...
        </View>
      ) : (
        <TextInput
          accent={
            groupCode ? (isCodeValid ? 'positive' : 'negative') : undefined
          }
          placeholder="Enter group code"
          onChangeText={setGroupCode}
          value={groupCode}
          spellCheck={false}
          autoCorrect={false}
          autoCapitalize="none"
          rightControls={
            <TextInput.InnerButton
              label={groupCode !== '' ? 'Go' : 'Close'}
              onPress={groupCode && isCodeValid ? actions.startSearch : close}
            />
          }
        />
      )}
    </YStack>
...
        open={step === 'selectType'}
        onOpenChange={handleOpenChange}
        mode="dialog"
        closeButton
        dialogContentProps={{ width: 380 }}
      >
        <ActionSheet.SimpleHeader title="Start a conversation" />
        <ActionSheet.Content>
          <TypeSelectionContent onSelectType={handleTypeSelected} />
        </ActionSheet.Content>
      </ActionSheet>
      <GroupTypeSelectionSheet
        open={step === 'selectGroupType'}
...
